--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="da">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/Favicon AutoglasExpress.jpg" />
-    <link rel="shortcut icon" type="image/jpeg" href="/Favicon AutoglasExpress.jpg" />
-    <link rel="apple-touch-icon" href="/Favicon AutoglasExpress.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Autoglas Express Minimalistic Website</title>
+    <title>Autoglas Express</title>
   </head>
-  <body>
+  <body class="bg-gray-900">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
