--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Autoglas Express</title>
+    <meta name="description" content="Professionel bilrudeservice i Odense. Hurtig udskiftning af autoruder, stenslag reparation, solfilm og kalibrering. 2 års garanti og gratis kundebil." />
+    <link rel="icon" href="/favicon.ico" />
   </head>
   <body class="bg-gray-900">
     <div id="root"></div>
