Fix module import syntax error

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </script>
 
     <!-- (C) Runtime patcher that reads the JSON above and rewires images -->
-    <script src="/public/site.js"></script>
+    <script type="module" src="/public/site.js"></script>
 
     <!-- ======= END RUNTIME CONFIG ======= -->
   </body>
