--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </script>
 
     <script id="image-rewrites" type="application/json">
-      {}
+      {
+        "headerLogo": "/public/logo-test.png"
+      }
     </script>
 
     <script src="/public/site.js"></script>
