Change 'Autoglas Express' to 'Express' on front page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Autoglas Express - Udskiftning af autoruder på Fyn - Montering af solfilm</title>
+    <title>Express - Udskiftning af autoruder på Fyn - Montering af solfilm</title>
     <meta name="description" content="Udskiftning og reparation af autoruder, kalibrering, solfilm og stenslag. Hurtig service i hele området." />
     <link rel="canonical" href="/" />
 
